@@ -1,3 +1,8 @@
+2006-03-15  Wim Taymans  <wim@fluendo.com>
+
+	* libs/gst/base/gstadapter.c:
+	Add some docs.
+
 2006-03-15  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* win32/common/libgstbase.def:
